* Created Get->hostname_from_uuid() that can take either a node UUID or host UUID and it will return the hostname of the matching machine. * Started working on the code to check/update existing controllers, cache, and variables for scan-hpacucli.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/AN/Tools/Alert.pod
+++ b/AN/Tools/Alert.pod
@@ -1182,6 +1182,10 @@ The 'AN::Tools::Get' module's 'node_upses()' method was called without an Anvil!
 
 The 'AN::Tools::Get' module's 'node_upses()' method was called without an node name being passed.
 
+=head2 C<243>
+
+The 'AN::Tools::Get' module's 'hostname_from_uuid()' method was called without either a host or node UUID being passed.
+
 
 
 =head2 C<999>
